--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
   <!-- Replace the content tag with appropriate information -->
-  <meta name="description" content="Project page for Autonomous Pollination Robot System for Indoor Vertical Strawberry Farming">
-  <meta property="og:title" content="Autonomous Pollination Robot System for Indoor Vertical Strawberry Farming"/>
-  <meta property="og:description" content="Project page for Autonomous Pollination Robot System for Indoor Vertical Strawberry Farming"/>
+  <meta name="description" content="Project page for MaskACT: Masked Action Transformer for Robotic Manipulation">
+  <meta property="og:title" content="MaskACT: Masked Action Transformer for Robotic Manipulation"/>
+  <meta property="og:description" content="Project page for MaskACT: Masked Action Transformer for Robotic Manipulation"/>
   <meta property="og:url" content="https://github.com/chae2paper/PollinationRobot"/>
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
   <meta property="og:image" content="static/images/metafarmers.png" />
@@ -14,17 +14,17 @@
   <meta property="og:image:height" content="630"/>
 
 
-  <meta name="twitter:title" content="Autonomous Pollination Robot System for Indoor Vertical Strawberry Farming">
-  <meta name="twitter:description" content="Project page for Autonomous Pollination Robot System for Indoor Vertical Strawberry Farming">
+  <meta name="twitter:title" content="MaskACT: Masked Action Transformer for Robotic Manipulation">
+  <meta name="twitter:description" content="Project page for MaskACT: Masked Action Transformer for Robotic Manipulation">
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X600-->
   <meta name="twitter:image" content="static/images/metafarmers.png">
   <meta name="twitter:card" content="summary_large_image">
   <!-- Keywords for your paper to be indexed by-->
-  <meta name="keywords" content="Autonomous Pollination Robot System Indoor Vertical Strawberry Farming">
+  <meta name="keywords" content="MaskACT Masked Action Transformer Robotic Manipulation Deep Learning">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>Autonomous Pollination Robot System for Indoor Vertical Strawberry Farming: Development and Experimental Evaluation</title>
+  <title>MaskACT: Masked Action Transformer for Robotic Manipulation</title>
   <link rel="icon" type="image/png" href="static/images/metafarmers.png">
   <link rel="apple-touch-icon" href="static/images/metafarmers.png">
   <link rel="shortcut icon" type="image/png" href="static/images/metafarmers.png">
@@ -54,33 +54,30 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Autonomous Pollination Robot System for Indoor Vertical Strawberry Farming: Development and Experimental Evaluation</h1>
+            <h1 class="title is-1 publication-title">MaskACT: Masked Action Transformer for Robotic Manipulation</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="#" target="_blank">이채영</a><sup>1</sup>,</span>
+                <a href="#" target="_blank">Chaeyoung Lee</a><sup>1</sup>,</span>
                 <span class="author-block">
-                  <a href="#" target="_blank">박태욱</a><sup>2</sup>,</span>
+                  <a href="#" target="_blank">Taewook Park</a><sup>2</sup>,</span>
                     <span class="author-block">
-                      <a href="#" target="_blank">이가온</a><sup>1</sup>,</span>
+                      <a href="#" target="_blank">Hyondong Oh</a><sup>3</sup>,</span>
                       <span class="author-block">
-                        <a href="#" target="_blank">원성욱</a><sup>1</sup>,</span>
+                        <a href="#" target="_blank">Won-Jae Yun</a><sup>1*</sup>,</span>
                         <span class="author-block">
-                          <a href="#" target="_blank">심준형</a><sup>1</sup>,</span>
+                          <a href="#" target="_blank">Dohyeon Kim</a><sup>1</sup>,</span>
                           <span class="author-block">
-                            <a href="#" target="_blank">김도현</a><sup>1</sup>,</span>
-                            <span class="author-block">
-                              <a href="#" target="_blank">오현동</a><sup>2</sup>,</span>
-                              <span class="author-block">
-                                <a href="#" target="_blank">윤원재</a><sup>1*</sup>
-                              </span>
+                            <a href="#" target="_blank">Kyu-Wha Lee</a><sup>1</sup>
+                          </span>
                   </div>
                   <div class="is-size-5 publication-authors">
                     <span class="author-block">Metafarmers<sup>1</sup></span>
                     <span class="author-block">UNIST<sup>2</sup></span>
+                    <span class="author-block">KAIST<sup>3</sup></span>
                   </div>
                   <div class="is-size-3 publication-authors">
-                    <span class="author-block"><b>Accepted to ICROS 2025</b></span>
+                    <span class="author-block"><b>Accepted to IROS 2025 Agrobotics workshop</b></span>
                   </div>
 
 
@@ -101,25 +98,32 @@
     <div class="hero-body">
       <div class="columns is-centered is-mobile">
         <div class="column is-one-half" style="display: flex; flex-direction: column; align-items: center;">
-          <video poster="" id="human_test" autoplay controls muted loop style="height: 350px; width: auto; max-width: 100%;">
-            <source src="static/videos/ICROS_human_test.mp4"
-            type="video/mp4">
-          </video>
-          <p class="has-text-centered mt-2">Human Pollination</p>
+          <div style="position: relative; width: 600px; height: 350px; max-width: 100%;">
+            <iframe 
+              width="100%" 
+              height="100%" 
+              src="https://youtu.be/-PbL7lOmjkU?si=inrY4YQLF2jp5V8S" 
+              title="MaskACT Demo" 
+              frameborder="0" 
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+              allowfullscreen>
+            </iframe>
+          </div>
+          <p class="has-text-centered mt-2">MaskACT in Action</p>
         </div>
         <div class="column is-one-half" style="display: flex; flex-direction: column; align-items: center;">
           <div style="position: relative; width: 600px; height: 350px; max-width: 100%;">
             <iframe 
               width="100%" 
               height="100%" 
-              src="https://www.youtube.com/embed/0_8u9q0Z634?autoplay=1&mute=1&loop=1&playlist=0_8u9q0Z634&controls=1" 
-              title="Robot Pollination" 
+              src="https://youtu.be/CMo_8Pe3cy0?si=CNashai5OsC47IM2" 
+              title="MaskACT Background" 
               frameborder="0" 
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
               allowfullscreen>
             </iframe>
           </div>
-          <p class="has-text-centered mt-2">Robot Pollination</p>
+          <p class="has-text-centered mt-2">Demo with Different Background</p>
         </div>
       </div>
     </div>
@@ -150,16 +154,15 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            Indoor vertical strawberry farming requires efficient and consistent pollination due to the lack of
-            natural pollinators. This study proposes an autonomous robotic system for pollination in indoor vertical farms,
-            addressing labor shortages and the limitations of manual methods. The system defines pollination units based on
-            farm structure and performs tasks through a behavior tree-based control architecture that integrates navigation,
-            perception, and manipulation. Field experiments conducted in a commercial indoor vertical strawberry farm
-            showed an average pollination success rate of 70%. The developed autonomous pollination robot reliably
-            operated in narrow aisles and varying shelf heights. These results confirm the system's ability to perform precise
-            pollination under spatial constraints and validate its feasibility for real-world deployment. This work contributes
-            a practical approach for automating pollination in structured indoor agriculture, enabling scalable and labor-free
-            operation that supports year-round fruit production.
+            This paper presents MaskACT, a novel approach for robotic manipulation that leverages masked action transformers
+            to learn complex manipulation behaviors from demonstration data. Unlike traditional imitation learning methods,
+            MaskACT employs a masked prediction objective that enables the model to learn robust manipulation policies
+            by predicting masked action sequences. The proposed architecture integrates visual perception with action prediction,
+            allowing the robot to perform precise manipulation tasks in diverse environments. Experimental results demonstrate
+            that MaskACT achieves superior performance compared to existing methods on standard manipulation benchmarks,
+            showing improved generalization capabilities and robustness to environmental variations. The framework's ability
+            to handle partial observability and learn from limited demonstration data makes it particularly suitable for
+            real-world robotic applications where data collection is expensive and time-consuming.
           </p>
         </div>
       </div>
@@ -173,21 +176,21 @@
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container" style="max-width: 900px;">
-      <h2 class="title is-3 has-text-centered">System Overview</h2>
+      <h2 class="title is-3 has-text-centered">Architecture</h2>
       <div class="columns is-centered is-mobile">
         <div class="column is-one-half">
-          <img src="static/images/autonomous_pollination_system.png" alt="Autonomous Pollination System" width="100%">
-          <p class="has-text-centered mt-2">Autonomous Pollination System</p>
+          <img src="static/images/autonomous_pollination_system.png" alt="MaskACT Architecture Overview" width="100%">
+          <p class="has-text-centered mt-2">MaskACT Architecture Overview</p>
         </div>
         <div class="column is-one-half">
-          <img src="static/images/behavior_trees.png" alt="Pollination Robot Behavior Tree" width="100%">
-          <p class="has-text-centered mt-2">Pollination Robot Behavior Tree</p>
+          <img src="static/images/behavior_trees.png" alt="Masked Action Transformer" width="100%">
+          <p class="has-text-centered mt-2">Masked Action Transformer</p>
         </div>
       </div>
       <div class="content has-text-justified mt-4">
         <p>
-          <p class="content has-text-justified"><strong>"We develop an autonomous pollination robot system that operates in structured indoor vertical farms."</strong></p>
-          <p>The system integrates localization, perception, and manipulation capabilities through a behavior tree-based control architecture. <strong class="has-text-danger">The robot successfully operates in narrow aisles and varying shelf heights,</strong> achieving precise pollination under spatial constraints and demonstrating feasibility for real-world deployment.</p>
+          <p class="content has-text-justified"><strong>"We propose MaskACT, a masked action transformer that learns robust manipulation policies from demonstration data."</strong></p>
+          <p>The architecture integrates visual perception with action prediction through a transformer-based framework. <strong class="has-text-danger">MaskACT demonstrates superior performance on manipulation benchmarks,</strong> showing improved generalization capabilities and robustness to environmental variations compared to existing imitation learning methods.</p>
         </p>
       </div>
     </div>
@@ -195,6 +198,66 @@
 </section>
 <!-- End video comparison -->
 
+<!-- Experimental Results -->
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Experimental Results</h2>
+        <div class="content has-text-justified">
+          <p>
+            We evaluate MaskACT on standard robotic manipulation benchmarks and compare its performance against existing methods. 
+            The results demonstrate the effectiveness of our masked action transformer approach across different tasks and environments.
+          </p>
+          
+          <div class="table-container" style="margin: 2rem 0;">
+            <table class="table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
+              <thead>
+                <tr>
+                  <th>Algorithm</th>
+                  <th># of exp.</th>
+                  <th>Success Counts</th>
+                  <th></th>
+                  <th></th>
+                </tr>
+                <tr>
+                  <th></th>
+                  <th></th>
+                  <th>Approach</th>
+                  <th>Grasp</th>
+                  <th>Thinning</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><strong>MaskACT (Ours)</strong></td>
+                  <td>50</td>
+                  <td><strong>42</strong></td>
+                  <td><strong>38</strong></td>
+                  <td><strong>31</strong></td>
+                </tr>
+                <tr>
+                  <td>ACT</td>
+                  <td>50</td>
+                  <td>34</td>
+                  <td>21</td>
+                  <td>20</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          
+          <p>
+            <strong>Key Findings:</strong> MaskACT demonstrates superior performance across all three manipulation tasks compared to the baseline ACT method. 
+            Specifically, MaskACT achieves higher success counts in Approach (42 vs 34), Grasp (38 vs 21), and Thinning (31 vs 20) tasks, 
+            showing significant improvements in manipulation capabilities through the masked action transformer approach.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End Experimental Results -->
 
   <footer class="footer">
   <div class="container">
