--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <iframe 
               width="100%" 
               height="100%" 
-              src="https://youtu.be/-PbL7lOmjkU?si=inrY4YQLF2jp5V8S" 
+              src="https://www.youtube.com/embed/-PbL7lOmjkU" 
               title="MaskACT Demo" 
               frameborder="0" 
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
@@ -116,7 +116,7 @@
             <iframe 
               width="100%" 
               height="100%" 
-              src="https://youtu.be/CMo_8Pe3cy0?si=CNashai5OsC47IM2" 
+              src="https://www.youtube.com/embed/CMo_8Pe3cy0" 
               title="MaskACT Background" 
               frameborder="0" 
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
